--- a/src/Styles/card.css
+++ b/src/Styles/card.css
@@ -3,8 +3,16 @@
   flex-direction: column;
   height: 300px;
   flex-basis: 30%;
+  margin: 2em 0;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 .card_name {
   text-align: center;
+  padding-top: 1em;
+}
+.card_canvas {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
